# Final-Project

./: readme.md
ExcavatorAPI/: .gitignore  ExcavatorAPI.py  PCA9685_controller.py  dataclass_types.py  excavatorapi_tester_agent.py  orientation_tracker.py  proxy_server.py  pwm_controller_prac.py  readme.md  requirements.txt  screen_manager.py  sensor_benchmark_koodit.py  service_listener.py  setup.sh  tcp_client.py  tcp_server.py  testing.py  udp_socket.py  utils.py
ExcavatorAPI/config/: backup_servo.yaml  excavator_config.yaml  orientation_tracker_config.yaml  screen_config.yaml  servo_config.yaml  servo_config_documentation.yaml
ExcavatorManagementWebsite/: README.md  index.html  package-lock.json  package.json
ExcavatorManagementWebsite/final_build/: index.html  start_website.bat
ExcavatorManagementWebsite/final_build/assets/: index-6XoN6VAK.css  index-BMMQfByQ.js
ExcavatorManagementWebsite/src/: App.jsx  index.css
ExcavatorManagementWebsite/src/components/: ActionsCard.jsx  AddPwmChannelForm.jsx  ConfigCard.jsx  ConfigInfo.jsx  ConnectCard.jsx  DeleteButton.jsx  FormLblInGroup.jsx  Header.jsx  Loading.jsx  PrimaryButton.jsx  SelectionGroup.jsx  StatusCard.jsx  StatusInfo.jsx
ExcavatorMotionPlatformIntegration/: .gitignore  README.md  requirements.txt  run_after_setup_bat.bat  setup.bat  setup.ps1
ExcavatorMotionPlatformIntegration/src/: CommunicationHub.py  main.py  testing.py
ExcavatorMotionPlatformIntegration/src/constants/: pwm_channels.py
ExcavatorMotionPlatformIntegration/src/gui/: config.json  gui.py
ExcavatorMotionPlatformIntegration/src/handlers/: actions.py
ExcavatorMotionPlatformIntegration/src/helpers/: gui_helpers.py
ExcavatorMotionPlatformIntegration/src/services/: MotorApi.py  NiDAQ_controller.py  excavator_client.py  motionplatform_interface.py  process_manager.py  udp_socket.py
ExcavatorMotionPlatformIntegration/src/settings/: motors_config.py
ExcavatorMotionPlatformIntegration/src/utils/: setup_logging.py  utils.py
ExcavatorMotionPlatformIntegration/src/widgets/: ExcavatorTab.py
build_udp_socket/: readme.md
build_udp_socket/build_debian/: CMakeLists.txt  build.sh
build_udp_socket/build_windows/: CMakeLists.txt  build_windows.ps1
build_udp_socket/src/: TCPSocketClient.hpp  udp_socket.cpp  udp_socket.h  udp_socket_bindings.cpp
